--- a/HealthTrac/crud/HealthTrac-backend/package.json
+++ b/HealthTrac/crud/HealthTrac-backend/package.json
@@ -17,6 +17,8 @@
     "helmet": "^3.21.2",
     "knex": "^0.20.1",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-fitbit-oauth2": "^1.0.2",
     "pg": "^7.12.1"
   },
   "devDependencies": {
