--- a/HealthTrac/crud/new-frontend/package.json
+++ b/HealthTrac/crud/new-frontend/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "healthtrac",
+  "name": "new-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "email-validator": "^2.0.4",
-    "formik": "^2.0.3",
+    "bootstrap": "^4.3.1",
     "react": "^16.11.0",
+    "react-csv": "^1.1.2",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "yup": "^0.27.0"
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
